# optimal-execution-engine

./: .gitignore  GUIDE_OVERVIEW.md  GUIDE_PROJECT.md  GUIDE_ROOT.md  LICENSE  README.md  config.toml  pyproject.toml
blog/: adaptive_outline.md  generate_charts.py  index.fr.md  index.md
blog/data/: execution_summary.csv  feature_target_audit.csv  linear_forecasts.csv  model_metric_summary.csv  walk_forward_split_metrics.csv
data/raw/: README.md  sample_intraday_bars.meta.json  sample_intraday_bars.parquet  sample_intraday_bars_msft.meta.json  sample_intraday_bars_msft.parquet  sample_intraday_bars_nvda.meta.json  sample_intraday_bars_nvda.parquet
docs/: GUIDE_docs.md
docs/reference/: clickhouse_exploration_queries.sql
docs/user/: demo_walkthrough.md
notebooks/: README.md  offline_research_pipeline.ipynb
outputs/: README.md
scripts/: GUIDE_scripts.md  build_offline_research_pipeline.py
src/: GUIDE_src.md
src/optimal_execution_engine/: __init__.py  cli.py  config.py  types.py  version.py
tests/: GUIDE_tests.md  test_cli_output.py  test_config.py
tests/calibration/: test_market_state.py  test_market_state_multiday.py  test_volume_profile.py  test_volume_profile_multiday.py
tests/data/: test_cache.py  test_clickhouse.py  test_loaders.py
tests/reporting/: test_evaluation.py  test_summary.py
tests/research/: test_features.py  test_modeling.py  test_realized_variance.py  test_walk_forward_evaluation.py
tests/schedules/: test_almgren_chriss.py  test_twap.py  test_vwap.py
tests/simulator/: test_execution.py
(+32 files in other folders)
